fixed align-end and removed to pascal case
(cherry picked from commit c68ee065fb087f9b6e44d1dcc1e56e7ed41dfbf8)

--- a/src/app/components/Navbar/Navbar.module.css
+++ b/src/app/components/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
   display: flex;
   width: -webkit-fill-available;
   width: 100%;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: flex-start;
   padding: 1rem;
   color: #fff;
@@ -23,7 +23,7 @@
   display: flex;
   width: -webkit-fill-available;
   width: 100%;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: flex-start;
   padding: 1rem;
   color: #fff;
