--- a/src/app/components/WeDealWith/WeDealWith.module.css
+++ b/src/app/components/WeDealWith/WeDealWith.module.css
@@ -117,7 +117,7 @@
 .images {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .circularButtonWrapper {
